--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    font-family: 'Source Sans Pro', sans-serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    --swiper-navigation-sides-offset: 10px;
+    --swiper-navigation-color: #32383E;
+    --swiper-navigation-size: 60px !important;
+}
+
+.swiper {
+    padding-bottom: 56px !important;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    transform: translateY(-50%) !important;
+}
+
+.product-content {
+    position: relative;
+}
+
+.product-content:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(50, 56, 62, 0.7);
+}
+
+.product-content > * {
+    position: relative;
+    z-index: 1;
+}
